<resources>
    <string name="app_name">Coding Guide</string>
    <string name="welcome_to_coding_guide">Welcome to Coding Guide</string>
    <string name="home">Home</string>
    <string name="languages">Languages</string>
    <string name="development">Development</string>
    <string name="questions">Questions</string>
    <string name="interview">Interview</string>
    <string name="exit">Exit</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="compiler">Compiler</string>
    <string name="code_compiler">Code Compiler</string>
    <string name="competitive_programming">Competitive Programming</string>
    <string name="interview_tips">Interview Tips</string>
    <string name="programming_languages">Programming languages</string>
    <string name="software_development">Software Development</string>
    <string name="test_your_code">Test your Code</string>

</resources>