<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<group
    android:checkableBehavior="single">

    <item
        android:id="@+id/home"
        android:title="@string/home"
        android:icon="@drawable/ic_home"/>
    <item
        android:id="@+id/language"
        android:title="@string/programming_languages"
        android:icon="@drawable/ic_language"/>
    <item
        android:id="@+id/dev"
        android:title="@string/software_development"
        android:icon="@drawable/ic_development"/>
    <item
        android:id="@+id/quest"
        android:title="@string/competitive_programming"
        android:icon="@drawable/ic_programming"/>
    <item
        android:id="@+id/compiler"
        android:title="@string/test_your_code"
        android:icon="@drawable/ic_compiler"/>
    <item
        android:id="@+id/exit"
        android:title="@string/exit"
        android:icon="@drawable/ic_exit"/>

</group>

</menu>
